force-app/main/default/objects/Compliance_Fine__c/Compliance_Fine__c.object-meta.xml
<CustomObject>
    <label>SMS Compliance Fine</label>
    <nameField>
        <label>Child Violation Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Compliance Fines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>