force-app/main/default/objects/Compliance_Fine__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agent_Name</description>
    <inlineHelpText>Agent_Name</inlineHelpText>
    <label>Agent Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SMS Compliance Fines</relationshipLabel>
    <relationshipName>Compliance_Fines</relationshipName>
    <type>Lookup</type>
</CustomField>