force-app/main/default/objects/Compliance_Fine__c/fields/Appeal_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Case_Number__c</fullName>
    <description>Case numbers related to compliance fine</description>
    <label>Appeal Case Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>