force-app/main/default/objects/Compliance_Fine__c/fields/Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Date__c</fullName>
    <inlineHelpText>The date this fine will be sent to billing.</inlineHelpText>
    <label>Bill Date</label>
    <type>Date</type>
</CustomField>