force-app/main/default/objects/Compliance_Fine__c/fields/Bill_Now__c.field-meta.xml
<CustomField>
    <fullName>Bill_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bill_Now sets status to Ready to Bill</description>
    <label>Bill Now</label>
    <type>Checkbox</type>
</CustomField>