force-app/main/default/objects/Compliance_Fine__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Broker</description>
    <inlineHelpText>Broker</inlineHelpText>
    <label>Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Compliance_Fines</relationshipName>
    <type>Lookup</type>
</CustomField>