force-app/main/default/objects/Compliance_Fine__c/fields/Broker_Of_Record__c.field-meta.xml
<CustomField>
    <fullName>Broker_Of_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Broker_Of_Record</description>
    <inlineHelpText>Broker_Of_Record</inlineHelpText>
    <label>Broker Of Record</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>SMS Compliance Fines (Broker_Of_Record)</relationshipLabel>
    <relationshipName>Compliance_Fines</relationshipName>
    <type>Lookup</type>
</CustomField>