force-app/main/default/objects/Compliance_Fine__c/fields/Compliance_Violation__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Violation__c</fullName>
    <label>Compliance Violation</label>
    <referenceTo>Compliance_Violation__c</referenceTo>
    <relationshipLabel>SMS Compliance Fines</relationshipLabel>
    <relationshipName>Compliance_Fines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>