force-app/main/default/objects/Compliance_Fine__c/fields/Finance_override__c.field-meta.xml
<CustomField>
    <fullName>Finance_override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Finance_override sets status to Ready to Bill</description>
    <label>Finance override</label>
    <type>Checkbox</type>
</CustomField>