force-app/main/default/objects/Compliance_Fine__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <description>Full_Address</description>
    <inlineHelpText>Full_Address</inlineHelpText>
    <label>Full Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>