force-app/main/default/objects/Compliance_Fine__c/fields/Last_Date_to_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_to_Appeal__c</fullName>
    <inlineHelpText>The last date to appeal this fine.</inlineHelpText>
    <label>Last Date to Appeal</label>
    <type>Date</type>
</CustomField>