force-app/main/default/objects/Compliance_Fine__c/fields/Listing_Status__c.field-meta.xml
<CustomField>
    <fullName>Listing_Status__c</fullName>
    <description>Listing_Status</description>
    <inlineHelpText>Listing_Status</inlineHelpText>
    <label>Listing Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>