force-app/main/default/objects/Compliance_Fine__c/fields/MLS_Number__c.field-meta.xml
<CustomField>
    <fullName>MLS_Number__c</fullName>
    <description>MLS Number</description>
    <inlineHelpText>MLS Number</inlineHelpText>
    <label>MLS Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>