force-app/main/default/objects/Compliance_Fine__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <description>Notification_Type</description>
    <inlineHelpText>Notification_Type</inlineHelpText>
    <label>Notification Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>