force-app/main/default/objects/Compliance_Fine__c/fields/Notification_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type_ID__c</fullName>
    <description>Notification_Type_ID</description>
    <inlineHelpText>Notification_Type_ID</inlineHelpText>
    <label>Notification Type ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>