force-app/main/default/objects/Compliance_Fine__c/fields/Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Office_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Office_Manager</description>
    <inlineHelpText>Office_Manager</inlineHelpText>
    <label>Office Manager</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>SMS Compliance Fines (Office_Manager)</relationshipLabel>
    <relationshipName>Compliance_Fines1</relationshipName>
    <type>Lookup</type>
</CustomField>