force-app/main/default/objects/Compliance_Fine__c/fields/Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Name__c</fullName>
    <formula>Broker__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Name</label>
    <type>Text</type>
</CustomField>