force-app/main/default/objects/Compliance_Fine__c/fields/QC_Fine_Code__c.field-meta.xml
<CustomField>
    <fullName>QC_Fine_Code__c</fullName>
    <label>QC Fine Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>