force-app/main/default/objects/Compliance_Fine__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <color>#0B6FCE</color>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Under Appeal</fullName>
                <color>#78C953</color>
                <label>Under Appeal</label>
            </value>
            <value>
                <fullName>Ready to Bill</fullName>
                <color>#E27001</color>
                <label>Ready to Bill</label>
            </value>
            <value>
                <fullName>Billed</fullName>
                <color>#A845DC</color>
                <label>Billed</label>
            </value>
            <value>
                <fullName>Waived</fullName>
                <color>#F3D904</color>
                <label>Waived</label>
            </value>
            <value>
                <fullName>Reversed</fullName>
                <color>#A53711</color>
                <label>Reversed</label>
            </value>
            <value>
                <fullName>Off-MLS Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>