force-app/main/default/objects/Compliance_Fine__c/fields/Violation_Customer__c.field-meta.xml
<CustomField>
    <fullName>Violation_Customer__c</fullName>
    <description>Violation_Customer</description>
    <inlineHelpText>Violation_Customer</inlineHelpText>
    <label>Violation Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>