force-app/main/default/objects/Compliance_Fine__c/fields/Violation_Number_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Violation_Number_Formatted__c</fullName>
    <label>Violation Number Formatted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>