force-app/main/default/objects/Compliance_Fine__c/fields/Violation_State__c.field-meta.xml
<CustomField>
    <fullName>Violation_State__c</fullName>
    <description>Violation_State</description>
    <inlineHelpText>Violation_State</inlineHelpText>
    <label>Violation State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>