force-app/main/default/objects/Compliance_Fine__c/fields/Violation_State_ID__c.field-meta.xml
<CustomField>
    <fullName>Violation_State_ID__c</fullName>
    <description>Violation_State_ID</description>
    <inlineHelpText>Violation_State_ID</inlineHelpText>
    <label>Violation State ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>