force-app/main/default/objects/Compliance_Fine__c/fields/Violation_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Violation_Type_ID__c</fullName>
    <description>Violation_Type_ID</description>
    <inlineHelpText>Violation_Type_ID</inlineHelpText>
    <label>Violation Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>