force-app/main/default/objects/Compliance_Fine__c/fields/Zuora_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>Zuora_ErrorMessage__c</fullName>
    <label>Zuora Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>