force-app/main/default/objects/Compliance_Fine__c/fields/Zuora_Status__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Status__c</fullName>
    <description>Zuora billing processing status</description>
    <inlineHelpText>Zuora billing processing status</inlineHelpText>
    <label>Zuora Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>