force-app/main/default/objects/Compliance_Fine__c/validationRules/status_chk.validationRule-meta.xml
<ValidationRule>
    <fullName>status_chk</fullName>
    <active>true</active>
    <description>Check for change to locked status</description>
    <errorConditionFormula>AND(ISCHANGED(Status__c),OR(
ISPICKVAL(PRIORVALUE(Status__c),&quot;Billed&quot;),
ISPICKVAL(PRIORVALUE(Status__c),&quot;Waived&quot;)))</errorConditionFormula>
    <errorMessage>Status (&quot;Billed&quot;, &quot;Waived&quot;) cannot be changed</errorMessage>
</ValidationRule>