force-app/main/default/objects/Compliance_Fine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agent_Name__c</columns>
    <columns>Bill_Date__c</columns>
    <columns>Bill_Now__c</columns>
    <columns>Compliance_Violation__c</columns>
    <columns>Date_of_Fine__c</columns>
    <columns>Fine_Amount__c</columns>
    <columns>Listing_Status__c</columns>
    <columns>MLS_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription__c</columns>
    <columns>Zuora_ErrorMessage__c</columns>
    <columns>Zuora_Status__c</columns>
    <columns>Notification_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>